Update navigation bar style and add new sections to index.html and a footer

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -42,5 +42,33 @@
       </nav>
     </header>
 
+    <section class="About-page">
+        <div class="About-box">
+
+        </div>
+        <div class="img-section">
+
+        </div>
+    </section>
+
+    <section class="Skills-page">
+
+    </section>
+
+    <section class="Projects-page">
+
+    </section>
+
+    <footer>
+        <div class="footer-box">
+            <div class="footer-social">
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/dcd88072eb.js" crossorigin="anonymous"></script>
   </body>
 </html>
