--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -62,9 +62,15 @@
     <footer>
         <div class="footer-box">
             <div class="footer-social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/kartikayy" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            <a href="https://x.com/_kartikayy__" target="_blank">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="https://github.com/kartikay6969" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
             </div>
         </div>
     </footer>
