Update navigation bar style and add new sections to index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -42,7 +42,7 @@
       </nav>
     </header>
 
-    <section class="About-page">
+    <section id="about" class="About-page">
         <div class="About-box">
 
         </div>
@@ -51,15 +51,15 @@
         </div>
     </section>
 
-    <section class="Skills-page">
+    <section id="skills" class="Skills-page">
 
     </section>
 
-    <section class="Projects-page">
+    <section id="projects" class="Projects-page">
 
     </section>
 
-    <footer>
+    <footer id="contact" class="Contact-page">
         <div class="footer-box">
             <div class="footer-social">
                 <a href="https://www.linkedin.com/in/kartikayy" target="_blank">
