Update navigation bar style, add new sections to index.html, and fix nav bar position and width in style.css and started working on section one

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,10 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -43,38 +45,47 @@
     </header>
 
     <section id="about" class="About-page">
-        <div class="About-box">
-
+      <div class="About-box">
+        <div class="name">
+            <h1>HI, I'M KARTIKAY 👋</h1>
         </div>
-        <div class="img-section">
-
+        <div class="about-me">
+            <p class="ParaOne">
+                I am a web developer with a passion for creating beautiful and functional websites. I have experience in HTML, CSS, JavaScript, and React. I am always looking to learn new technologies and improve my skills. I am a hardworking and dedicated individual who is always looking to improve and grow.  
+            </p>
+            <p class="ParaTwo">
+                When I am not coding, I enjoy reading tech blogs, participating in hackathons, and contributing to open-source projects. I am always eager to take on new challenges and believe that continuous learning is essential in the ever-evolving field of web development.
+            </p>
         </div>
+      </div>
+      <div class="img-section">
+
+      </div>
     </section>
 
-    <section id="skills" class="Skills-page">
+    <section id="skills" class="Skills-page"></section>
 
-    </section>
-
-    <section id="projects" class="Projects-page">
-
-    </section>
+    <section id="projects" class="Projects-page"></section>
 
     <footer id="contact" class="Contact-page">
-        <div class="footer-box">
-            <div class="footer-social">
-                <a href="https://www.linkedin.com/in/kartikayy" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            <a href="https://x.com/_kartikayy__" target="_blank">
-                <i class="fa-brands fa-x-twitter"></i>
-            </a>
-            <a href="https://github.com/kartikay6969" target="_blank">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            </div>
+      <div class="footer-box">
+        <div class="footer-social">
+          <a href="https://www.linkedin.com/in/kartikayy" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="https://x.com/_kartikayy__" target="_blank">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+          <a href="https://github.com/kartikay6969" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
         </div>
+      </div>
     </footer>
 
-    <script src="https://kit.fontawesome.com/dcd88072eb.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/dcd88072eb.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
