Update navigation bar style, add new sections to index.html, and fix nav bar position and width in style.css and added hero image

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -59,7 +59,9 @@
         </div>
       </div>
       <div class="img-section">
-
+        <div class="contain">
+            <img src="Assets/HeroImg-removebg-preview.png" alt="developer" />
+        </div>
       </div>
     </section>
 
