Update navigation bar style, add new sections to index.html, and fix nav bar position and width in style.css

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -50,17 +50,28 @@
             <h1>HI, I'M KARTIKAY 👋</h1>
         </div>
         <div class="about-me">
-            <p class="ParaOne">
-                I am a web developer with a passion for creating beautiful and functional websites. I have experience in HTML, CSS, JavaScript, and React. I am always looking to learn new technologies and improve my skills. I am a hardworking and dedicated individual who is always looking to improve and grow.  
-            </p>
-            <p class="ParaTwo">
-                When I am not coding, I enjoy reading tech blogs, participating in hackathons, and contributing to open-source projects. I am always eager to take on new challenges and believe that continuous learning is essential in the ever-evolving field of web development.
-            </p>
+            <div class="ParaOne">
+                <p>
+                    I am a web developer with a passion for creating beautiful and functional websites. I have experience in HTML, CSS, JavaScript, and React. I am always looking to learn new technologies and improve my skills. I am a hardworking and dedicated individual who is always looking to improve and grow.  
+                </p>
+            </div>
+            <div class="ParaTwo">
+                <p>
+                    When I am not coding, I enjoy reading tech blogs, participating in hackathons, and contributing to open-source projects. I am always eager to take on new challenges and believe that continuous learning is essential in the ever-evolving field of web development.
+                </p>
+            </div>
+            <div class="ParaThree">
+                <p>
+                    <a href="mailto:your-kartikay23153064@akgec.ac.in">GET IN TOUCH 📧</a>
+                </p>
+            </div>
+            
         </div>
       </div>
       <div class="img-section">
         <div class="contain">
             <img src="Assets/HeroImg-removebg-preview.png" alt="developer" />
+
         </div>
       </div>
     </section>
