section page 1 completed included animations and did adjustments

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,7 +47,7 @@
     <section id="about" class="About-page">
       <div class="About-box">
         <div class="name">
-            <h1>HI, I'M KARTIKAY 👋</h1>
+            <h1>HI, I'M KARTIKAY <span class="hand">👋</span></h1>
         </div>
         <div class="about-me">
             <div class="ParaOne">
@@ -70,8 +70,14 @@
       </div>
       <div class="img-section">
         <div class="contain">
-            <img src="Assets/HeroImg-removebg-preview.png" alt="developer" />
+            <div class="hero">
 
+                <img src="Assets/HeroImg-removebg-preview.png" alt="developer" />
+            </div>
+            <div class="floating-images">
+                <!-- <img src="Assets/HTML5_logo_and_wordmark.svg.png" alt=""> -->
+                <img src="Assets/Untitled_design-removebg-preview.png" alt="">
+            </div>
         </div>
       </div>
     </section>
