Update skills section in index.html and style.css

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -82,7 +82,44 @@
       </div>
     </section>
 
-    <section id="skills" class="Skills-page"></section>
+    <section id="skills" class="Skills-page">
+
+        <div class="skills-heading">
+            <h1>SKILLS</h1>
+        </div>
+
+        <div class="skills-boxes">
+            <div class="dev">
+                <div class="html">
+                    <img src="Assets/HTML5_logo_and_wordmark.svg.png" alt="">
+                </div>
+                <div class="css">
+                    <img src="Assets/CSS3_logo_and_wordmark.svg.png" alt="">
+                </div>
+                <div class="js">
+                    <img src="Assets/JavaScript-logo.png" alt="">
+                </div>
+                <div class="details-dev">
+                    <p>
+                        I have experience in HTML, CSS, and JavaScript. I have created projects using these technologies and am always looking to improve my skills.
+                    </p>
+                </div>
+            </div>
+            <div class="lang">
+                <div class="c">
+                    <img src="Assets/C_Logo.png" alt="">
+                </div>
+                <div class="cpp">
+                    <img src="Assets/C++_logo.png" alt="">
+                </div>
+                <div class="details-cp">
+                    <p>
+                        Im profivent in C and C++ programming languages and love to do competitive programmingi in c and cpp.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="projects" class="Projects-page"></section>
 
