--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -75,7 +75,6 @@
                 <img src="Assets/HeroImg-removebg-preview.png" alt="developer" />
             </div>
             <div class="floating-images">
-                <!-- <img src="Assets/HTML5_logo_and_wordmark.svg.png" alt=""> -->
                 <img src="Assets/Untitled_design-removebg-preview.png" alt="">
             </div>
         </div>
@@ -128,7 +127,37 @@
         </div>
     </section>
 
-    <section id="projects" class="Projects-page"></section>
+    <section id="projects" class="Projects-page">
+
+        <div class="projects-heading">
+            <h1>PROJECTS</h1>
+        </div>
+
+        <div class="projects-container">
+            <div class="project">
+                <p>Tic-Tac-Toe</p>
+                <img src="Assets/Screenshot 2024-10-05 at 9.40.02 AM.png" alt="">
+                <h1>Classic Tic-Tac-Toe game</h1>
+                <p>This project demonstrates basic DOM manipulation, event handling, and game logic implementation.</p>
+                <button><a href="https://your-tic-tac-toe-project-link.com" target="_blank">View Project</a></button>
+            </div>
+
+            <div class="project">
+                <p>To-do-list</p>
+                <img src="" alt="">
+                <h1>Simple to-do list app</h1>
+                <p>A simple and interactive To-Do List web application that allows users to create, edit, delete, and manage their daily tasks efficiently</p>
+            </div>
+
+            <div class="project">
+                <p>Comercio</p>
+                <img src="" alt="">
+                <h1>E-Commerce Website</h1>
+                <p>Modern e-commerce frontend with HTML, CSS, and JavaScript. Features dynamic product loading from FakeStore API, interactive cart, responsive design, and GSAP animations.</p>
+            </div>
+        </div>
+
+    </section>
 
     <footer id="contact" class="Contact-page">
       <div class="footer-box">
