Update projects section in index.html and style.css

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -135,7 +135,7 @@
 
         <div class="projects-container">
             <div class="project">
-                <p>Tic-Tac-Toe</p>
+                <p class="title">Tic-Tac-Toe</p>
                 <img src="Assets/Screenshot 2024-10-05 at 9.40.02 AM.png" alt="">
                 <h1>Classic Tic-Tac-Toe game</h1>
                 <p>This project demonstrates basic DOM manipulation, event handling, and game logic implementation.</p>
@@ -143,17 +143,19 @@
             </div>
 
             <div class="project">
-                <p>To-do-list</p>
-                <img src="" alt="">
+                <p class="title">To-do-list</p>
+                <img src="Assets/Screenshot 2024-10-05 at 9.54.15 AM.png" alt="">
                 <h1>Simple to-do list app</h1>
                 <p>A simple and interactive To-Do List web application that allows users to create, edit, delete, and manage their daily tasks efficiently</p>
+                <button><a href="https://your-tic-tac-toe-project-link.com" target="_blank">View Project</a></button>
             </div>
 
             <div class="project">
-                <p>Comercio</p>
-                <img src="" alt="">
+                <p class="title">Comercio</p>
+                <img src="Assets/Screenshot 2024-10-05 at 10.02.02 AM.png" alt="">
                 <h1>E-Commerce Website</h1>
                 <p>Modern e-commerce frontend with HTML, CSS, and JavaScript. Features dynamic product loading from FakeStore API, interactive cart, responsive design, and GSAP animations.</p>
+                <button><a href="https://your-tic-tac-toe-project-link.com" target="_blank">View Project</a></button>
             </div>
         </div>
 
