Update project link in index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -204,7 +204,7 @@
           </p>
           <button>
             <a
-              href="https://github.com/kartikay6969/SITechAssignment/tree/main"
+              href="https://si-tech-assignment.vercel.app/"
               target="_blank"
               >View Project</a
             >
