Update font links and email address in index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,18 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
-      rel="stylesheet"
-    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -70,7 +59,7 @@
           </div>
           <div class="ParaThree">
             <p>
-              <a href="mailto:your-kartikay23153064@akgec.ac.in"
+              <a href="mailto:kartikay23153064@akgec.ac.in"
                 >GET IN TOUCH 📧</a
               >
             </p>
