--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -42,8 +42,7 @@
           <div class="ParaOne">
             <p>
               I am a web developer with a passion for creating beautiful and
-              functional websites. I have experience in HTML, CSS, JavaScript,
-              and React. I am always looking to learn new technologies and
+              functional websites. I have experience in HTML, CSS, JavaScript. I am always looking to learn new technologies and
               improve my skills. I am a hardworking and dedicated individual who
               is always looking to improve and grow.
             </p>
