Update project buttons in index.html and improve button styling in style.css

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -158,11 +158,9 @@
             This project demonstrates basic DOM manipulation, event handling,
             and game logic implementation.
           </p>
-          <button>
-            <a href="https://tic-tac-toe-orpin-seven.vercel.app" target="_blank"
-              >View Project</a
-            >
-          </button>
+          <a href="https://tic-tac-toe-orpin-seven.vercel.app" target="_blank">
+            <button>View Project</button>
+          </a>
         </div>
 
         <div class="project">
@@ -174,11 +172,9 @@
             users to create, edit, delete, and manage their daily tasks
             efficiently
           </p>
-          <button>
-            <a href="https://todo-list-phi-liard.vercel.app" target="_blank"
-              >View Project</a
-            >
-          </button>
+          <a href="https://todo-list-phi-liard.vercel.app" target="_blank">
+            <button>View Project</button>
+          </a>
         </div>
 
         <div class="project">
@@ -190,13 +186,9 @@
             dynamic product loading from FakeStore API, interactive cart,
             responsive design, and GSAP animations.
           </p>
-          <button>
-            <a
-              href="https://si-tech-assignment.vercel.app/"
-              target="_blank"
-              >View Project</a
-            >
-          </button>
+          <a href="https://si-tech-assignment.vercel.app/" target="_blank">
+            <button>View Project</button>
+          </a>
         </div>
       </div>
     </section>
