--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="ParaThree">
             <p>
-              <a href="mailto:kartikay23153064@akgec.ac.in"
+              <a href="mailto:"
                 >GET IN TOUCH 📧</a
               >
             </p>
