added emojis in index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -41,19 +41,12 @@
         <div class="about-me">
           <div class="ParaOne">
             <p>
-              I am a web developer with a passion for creating beautiful and
-              functional websites. I have experience in HTML, CSS, JavaScript. I am always looking to learn new technologies and
-              improve my skills. I am a hardworking and dedicated individual who
-              is always looking to improve and grow.
+              I am a web developer 👨‍💻 with a passion for creating beautiful 🌟 and functional websites. I have experience in HTML, CSS, and JavaScript. I am always looking to learn new technologies 📚 and improve my skills. I am a hardworking 💪 and dedicated individual who is always looking to improve and grow 😉.
             </p>
           </div>
           <div class="ParaTwo">
             <p>
-              When I am not coding, I enjoy reading tech blogs, participating in
-              hackathons, and contributing to open-source projects. I am always
-              eager to take on new challenges and believe that continuous
-              learning is essential in the ever-evolving field of web
-              development.
+              When I am not coding, I enjoy reading tech blogs 📖, participating in hackathons 👨‍💻, and contributing to open-source projects 🌍. I am always eager to take on new challenges 🚀 and believe that continuous learning 📚 is essential in the ever-evolving field of web development 💻.
             </p>
           </div>
           <div class="ParaThree">
