Update developer details in index.html

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -84,12 +84,7 @@
           </div>
           <div class="details-dev">
             <p>
-              I have strong proficiency in HTML, CSS, and JavaScript, which I've
-              applied in various projects to build responsive and interactive
-              web applications. My hands-on experience includes creating dynamic
-              UIs, implementing animations, and ensuring cross-browser
-              compatibility. These projects reflect my commitment to continuous
-              learning and growth in web development.
+              I have strong proficiency in HTML, CSS, and JavaScript 💻, which I’ve applied in various projects to build responsive and interactive web applications 🌐. My hands-on experience includes creating dynamic UIs 🎨, implementing animations 🎥, and ensuring cross-browser compatibility 🖥️. These projects reflect my commitment to continuous learning 📚 and growth in web development 🚀.
             </p>
           </div>
           <div class="github">
@@ -106,12 +101,7 @@
           </div>
           <div class="details-cp">
             <p>
-              Im profivent in C and C++, developed through solving various
-              algorithmic challenges. I have a solid understanding of data
-              structures and enjoy designing efficient algorithms to solve
-              complex problems. My experience has sharpened my coding speed,
-              problem-solving skills, and passion for continuous learning in the
-              field of competitive programming.
+              I’m proficient in C and C++ 💻, developed through solving various algorithmic challenges 🤔. I have a solid understanding of data structures 🌲 and enjoy designing efficient algorithms to solve complex problems 💡. My experience has sharpened my coding speed ⏱️, problem-solving skills 🧠, and passion for continuous learning 📚 in the field of competitive programming 🏆.
             </p>
           </div>
           <div class="cp-links">
