--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -196,16 +196,15 @@
       </div>
     </section>
 
-
     <section id="contact" class="Contactform">
       <div class="heading">
         <h1>CONTACT ME</h1>
       </div>
       <div class="container">
         <form class="form">
-            <input type="text" id="name" placeholder="Your Name">
-            <input type="email" id="email" placeholder="Your Email">
-            <textarea id="message" placeholder="Your Message"></textarea>
+          <input type="text" id="name" placeholder="Your Name" />
+          <input type="email" id="email" placeholder="Your Email" />
+          <textarea id="message" placeholder="Your Message"></textarea>
           <button type="submit">Send Message</button>
         </form>
       </div>
