Update project details and styling

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -154,28 +154,25 @@
 
       <div class="projects-container">
         <div class="project">
-          <p class="title">Tic-Tac-Toe</p>
-          <img src="Assets/Screenshot 2024-10-05 at 9.40.02 AM.png" alt="" />
-          <h1>Classic Tic-Tac-Toe game</h1>
+          <p class="title">International Superstar Soccer</p>
+          <img src="Assets/football.png" alt="" />
+          <h1>2D Football game</h1>
           <p>
-            This project demonstrates basic DOM manipulation, event handling,
-            and game logic implementation.
+            International Superstar Soccer is an exciting football (soccer) game built with HTML5 Canvas, CSS, and vanilla JavaScript. This game recreates the classic arcade-style football experience, featuring a match between Brazil and Argentina.
           </p>
-          <a href="https://tic-tac-toe-orpin-seven.vercel.app" target="_blank">
+          <a href="https://international-superstar-soccer-evxf.vercel.app" target="_blank">
             <button>View Project</button>
           </a>
         </div>
 
         <div class="project">
-          <p class="title">To-do-list</p>
-          <img src="Assets/Screenshot 2024-10-05 at 9.54.15 AM.png" alt="" />
-          <h1>Simple to-do list app</h1>
+          <p class="title">PokéCatch</p>
+          <img src="Assets/pokecatch.png" alt="" />
+          <h1>2D Pokémon themed arcade game</h1>
           <p>
-            A simple and interactive To-Do List web application that allows
-            users to create, edit, delete, and manage their daily tasks
-            efficiently
+            PokéCatch is a fun, browser-based game built using HTML, CSS, and Vanilla JavaScript. Play as Ash, the Pokémon trainer, and catch wild Pokémon while avoiding enemies! The objective is to catch as many Pokémon as you can by throwing Pokéballs, while navigating through the game environment.
           </p>
-          <a href="https://todo-list-phi-liard.vercel.app" target="_blank">
+          <a href="https://pokecatch-six.vercel.app" target="_blank">
             <button>View Project</button>
           </a>
         </div>
