Update GitHub profile link

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -226,7 +226,7 @@
           </a>
           <a
             class="foot-links"
-            href="https://github.com/kartikay6969"
+            href="https://github.com/Kartikayy007"
             target="_blank"
           >
             <i class="fa-brands fa-github"></i>
