Update GitHub profile link

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -99,7 +99,7 @@
             </p>
           </div>
           <div class="github">
-            <a href="https://github.com/kartikay6969" target="_blank">
+            <a href="https://github.com/Kartikayy007" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
           </div>
