--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -198,10 +198,10 @@
         <h1>CONTACT ME</h1>
       </div>
       <div class="container">
-        <form class="form">
-          <input type="text" id="name" placeholder="Your Name" />
-          <input type="email" id="email" placeholder="Your Email" />
-          <textarea id="message" placeholder="Your Message"></textarea>
+        <form class="form" action="mailto:kartikay23153064@akgec.ac.in" method="post" enctype="text/plain">
+          <input type="text" id="name" name="name" placeholder="Your Name" required />
+          <input type="email" id="email" name="email" placeholder="Your Email" required />
+          <textarea id="message" name="message" placeholder="Your Message" required></textarea>
           <button type="submit">Send Message</button>
         </form>
       </div>
