Remove unused files and configurations from the project

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -85,16 +85,17 @@
           <div class="imgs">
             <img src="Assets/HTML5_logo_and_wordmark.svg.png" alt="" />
             <img src="Assets/CSS3_logo_and_wordmark.svg.png" alt="" />
+            <img src="Assets/ts-logo-128.svg" alt="">
             <img src="Assets/JavaScript-logo.png" alt="" />
           </div>
           <div class="details-dev">
             <p>
-              I have strong proficiency in HTML, CSS, and JavaScript 💻, which
-              I’ve applied in various projects to build responsive and
-              interactive web applications 🌐. My hands-on experience includes
-              creating dynamic UIs 🎨, implementing animations 🎥, and ensuring
-              cross-browser compatibility 🖥️. These projects reflect my
-              commitment to continuous learning 📚 and growth in web development
+                I have strong proficiency in HTML, CSS, JavaScript, TypeScript, and React.js 💻, which
+                I’ve applied in various projects to build responsive and
+                interactive web applications 🌐. My hands-on experience includes
+                creating dynamic UIs 🎨, implementing animations 🎥, integrating APIs 🔗, and ensuring
+                cross-browser compatibility 🖥️. These projects reflect my
+                commitment to continuous learning 📚 and growth in web development
               🚀.
             </p>
           </div>
@@ -109,6 +110,7 @@
           <div class="imgs2">
             <img src="Assets/C_Logo.png" alt="" />
             <img src="Assets/C++_logo.png" alt="" />
+            <img src="Assets/1174949_js_react js_logo_react_react native_icon.png" alt="" class="react">
           </div>
           <div class="details-cp">
             <p>
@@ -178,15 +180,13 @@
         </div>
 
         <div class="project">
-          <p class="title">Comercio</p>
-          <img src="Assets/Screenshot 2024-10-05 at 10.02.02 AM.png" alt="" />
-          <h1>E-Commerce Website</h1>
+          <p class="title">HoteCrew</p>
+          <img src="Assets/Screenshot 2024-12-09 at 1.44.31 AM.png" alt="" />
+          <h1>Hotel Staff Management Website</h1>
           <p>
-            Modern e-commerce frontend with HTML, CSS, and JavaScript. Features
-            dynamic product loading from FakeStore API, interactive cart,
-            responsive design, and GSAP animations.
+            HotelCrew is a comprehensive full-stack platform designed to enhance staff management, streamline hotel operations, and improve customer experience. It caters to various roles within the hotel industry, including administrators (Admin and Manager) and staff members.
           </p>
-          <a href="https://si-tech-assignment.vercel.app/" target="_blank">
+          <a href="https://hotelcrew.me/" target="_blank">
             <button>View Project</button>
           </a>
         </div>
