--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -42,8 +42,8 @@
             <p>
                 I am a fullstack developer 👨‍💻 with a passion for creating beautiful 🌟
                 and functional web applications. I bring 8 months of experience
-                working with fullstack development. I am always looking 
-                to learn new technologies 📚 and improve my skills. I am a hardworking 💪 
+                working with fullstack development. I am always looking
+                to learn new technologies 📚 and improve my skills. I am a hardworking 💪
                 and dedicated individual who is always looking to improve and grow 😉.
             </p>
           </div>
@@ -133,6 +133,7 @@
                 width="50"
                 height="50"
                 viewBox="0 0 24 24"
+                style="transform: rotate(180deg);"
               >
                 <path
                   d="M4.5 7.5C5.328 7.5 6 8.172 6 9v10.5c0 .828-.672 1.5-1.5 1.5h-3C.672 21 0 20.328 0 19.5V9c0-.828.672-1.5 1.5-1.5h3zm7.5 0c.828 0 1.5.672 1.5 1.5v6c0 .828-.672 1.5-1.5 1.5h-3c-.828 0-1.5-.672-1.5-1.5v-6c0-.828.672-1.5 1.5-1.5h3zm7.5 0c.828 0 1.5.672 1.5 1.5v10.5c0 .828-.672 1.5-1.5 1.5h-3c-.828 0-1.5-.672-1.5-1.5V9c0-.828.672-1.5 1.5-1.5h3z"
