--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -91,13 +91,8 @@
           </div>
           <div class="details-dev">
             <p>
-                As a fullstack developer, I have strong proficiency in HTML, CSS, JavaScript, TypeScript, and React.js 💻, which
-                I’ve applied in various projects to build responsive and
-                interactive web applications 🌐. My hands-on experience includes
-                creating dynamic UIs 🎨, implementing animations 🎥, integrating APIs 🔗, and ensuring
-                cross-browser compatibility 🖥️. I've contributed to Google DeepMind's open source OSS Fuzz Gen project with major PR merges.
-                These projects reflect my commitment to continuous learning 📚 and growth in web development
-              🚀.
+                I’m a passionate Fullstack Developer with strong proficiency in HTML, CSS, JavaScript, TypeScript, and React.js, which I’ve applied in various projects to build responsive and interactive web applications 🌐. My hands-on experience includes creating dynamic UIs 🎨, implementing animations 🎥, integrating APIs 🔗, setting up CI/CD pipelines, and ensuring cross-browser compatibility 🖥️.
+I’ve contributed to Google DeepMind's OSS-Fuzz Gen open-source project with major PR merges, developed real-time coding platforms like CodeClash, and built scalable apps like Classence, supporting 5,000+ users. My skillset includes Next.js, Docker, Kubernetes, Redis, AWS, and I’m a SIH finalist and HackTech winner. These projects reflect my commitment to continuous learning 📚, growth 🚀, and collaborative problem-solving 🤝 in web development.
             </p>
           </div>
           <div class="github">
