Add resume download button and enhance skills section styling

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -61,6 +61,11 @@
             <p>
               <a href="mailto:kartikay23153064@akgec.ac.in">GET IN TOUCH 📧</a>
             </p>
+            <div class="resume-button">
+              <a href="Assets/Kartikay's%20Resume copy.pdf" download="Kartikay_Resume.pdf" target="_blank">
+                <button class="download-btn">📄 DOWNLOAD RESUME</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -81,59 +86,35 @@
         <h1>SKILLS</h1>
       </div>
 
-      <div class="skills-boxes">
-        <div class="dev">
-          <div class="imgs">
-            <img src="Assets/HTML5_logo_and_wordmark.svg.png" alt="" />
-            <img src="Assets/CSS3_logo_and_wordmark.svg.png" alt="" />
-            <img src="Assets/ts-logo-128.svg" alt="">
-            <img src="Assets/JavaScript-logo.png" alt="" />
-          </div>
-          <div class="details-dev">
-            <p>
-                I’m a passionate Fullstack Developer with strong proficiency in HTML, CSS, JavaScript, TypeScript, and React.js, which I’ve applied in various projects to build responsive and interactive web applications 🌐. My hands-on experience includes creating dynamic UIs 🎨, implementing animations 🎥, integrating APIs 🔗, setting up CI/CD pipelines, and ensuring cross-browser compatibility 🖥️.
-I’ve contributed to Google DeepMind's OSS-Fuzz Gen open-source project with major PR merges, developed real-time coding platforms like CodeClash, and built scalable apps like Classence, supporting 5,000+ users. My skillset includes Next.js, Docker, Kubernetes, Redis, AWS, and I’m a SIH finalist and HackTech winner. These projects reflect my commitment to continuous learning 📚, growth 🚀, and collaborative problem-solving 🤝 in web development.
-            </p>
-          </div>
-          <div class="github">
+      <div class="skills-content">
+        <div class="skill-category">
+          <h2>Web Development</h2>
+          <p>
+            I'm a passionate Fullstack Developer with strong proficiency in HTML, CSS, JavaScript, TypeScript, and React.js, which I've applied in various projects to build responsive and interactive web applications 🌐. My hands-on experience includes creating dynamic UIs 🎨, implementing animations 🎥, integrating APIs 🔗, setting up CI/CD pipelines, and ensuring cross-browser compatibility 🖥️.
+          </p>
+          <p>
+            I've contributed to Google DeepMind's OSS-Fuzz Gen open-source project with major PR merges, developed real-time coding platforms like CodeClash, and built scalable apps like Classence, supporting 5,000+ users. My skillset includes Next.js, Docker, Kubernetes, Redis, AWS, and I'm a SIH finalist and HackTech winner. These projects reflect my commitment to continuous learning 📚, growth 🚀, and collaborative problem-solving 🤝 in web development.
+          </p>
+          <div class="links">
             <a href="https://github.com/Kartikayy007" target="_blank">
-              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-github"></i> GitHub
             </a>
           </div>
         </div>
 
-        <div class="lang">
-          <div class="imgs2">
-            <img src="Assets/C_Logo.png" alt="" />
-            <img src="Assets/C++_logo.png" alt="" />
-            <img src="Assets/1174949_js_react js_logo_react_react native_icon.png" alt="" class="react">
-          </div>
-          <div class="details-cp">
-            <p>
-              I’m proficient in C and C++ 💻, developed through solving various
-              algorithmic challenges 🤔. I have a solid understanding of data
-              structures 🌲 and enjoy designing efficient algorithms to solve
-              complex problems 💡. My experience has sharpened my coding speed
-              ⏱️, problem-solving skills 🧠, and passion for continuous learning
-              📚 in the field of competitive programming 🏆.
-            </p>
-          </div>
-          <div class="cp-links">
-            <a
-              href="https://codeforces.com/profile/pudv95"
-              target="_blank"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="50"
-                height="50"
-                viewBox="0 0 24 24"
-                style="transform: rotate(180deg);"
-              >
-                <path
-                  d="M4.5 7.5C5.328 7.5 6 8.172 6 9v10.5c0 .828-.672 1.5-1.5 1.5h-3C.672 21 0 20.328 0 19.5V9c0-.828.672-1.5 1.5-1.5h3zm7.5 0c.828 0 1.5.672 1.5 1.5v6c0 .828-.672 1.5-1.5 1.5h-3c-.828 0-1.5-.672-1.5-1.5v-6c0-.828.672-1.5 1.5-1.5h3zm7.5 0c.828 0 1.5.672 1.5 1.5v10.5c0 .828-.672 1.5-1.5 1.5h-3c-.828 0-1.5-.672-1.5-1.5V9c0-.828.672-1.5 1.5-1.5h3z"
-                />
-              </svg>
+        <div class="skill-category">
+          <h2>Programming & Algorithms</h2>
+          <p>
+            I'm proficient in C and C++ 💻, developed through solving various
+            algorithmic challenges 🤔. I have a solid understanding of data
+            structures 🌲 and enjoy designing efficient algorithms to solve
+            complex problems 💡. My experience has sharpened my coding speed
+            ⏱️, problem-solving skills 🧠, and passion for continuous learning
+            📚 in the field of competitive programming 🏆.
+          </p>
+          <div class="links">
+            <a href="https://codeforces.com/profile/pudv95" target="_blank">
+              <i class="fa-solid fa-code"></i> Codeforces
             </a>
           </div>
         </div>
