--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -62,7 +62,7 @@
               <a href="mailto:kartikay23153064@akgec.ac.in">GET IN TOUCH 📧</a>
             </p>
             <div class="resume-button">
-              <a href="Assets/Kartikay's%20Resume copy.pdf" download="Kartikay_Resume.pdf" target="_blank">
+              <a href="Assets/kartikay-Resume.pdf" download="Kartikay_Resume.pdf" target="_blank">
                 <button class="download-btn">📄 DOWNLOAD RESUME</button>
               </a>
             </div>
